--- a/dp2-frontend/index.html
+++ b/dp2-frontend/index.html
@@ -11,3 +11,13 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+<style>
+  html, body, #root {
+    background-color: #F3F4F6;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+  }
+</style>
