--- a/dp2-frontend/index.html
+++ b/dp2-frontend/index.html
@@ -21,5 +21,17 @@
     padding: 0px;
     width: 100%;
     height: 100%;
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+    /* Track */
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: #084298;
+      border-radius: 10px;
+    }
   }
 </style>
