--- a/dp2-frontend/index.html
+++ b/dp2-frontend/index.html
@@ -26,7 +26,6 @@
   html,
   body,
   #root {
-    background-color: #F3F4F6;
     margin: 0px;
     padding: 0px;
     width: 100%;
@@ -43,7 +42,7 @@
 
     /* Handle */
     ::-webkit-scrollbar-thumb {
-      background: #084298;
+      background: var(--bs-primary);
       border-radius: 10px;
     }
   }
